--- a/src/app/pages/bonoloto/bonoloto.component.html
+++ b/src/app/pages/bonoloto/bonoloto.component.html
@@ -53,9 +53,8 @@
               <li>Número complementario optimizado</li>
             </ul>
           </div>
-          <button class="generate-btn" *ngIf="hasBasicPlan" (click)="generateBasicPrediction()" [disabled]="isGeneratingPrediction">
-            <span *ngIf="!isGeneratingPrediction">Generar</span>
-            <span *ngIf="isGeneratingPrediction">Generando...</span>
+          <button class="generate-btn" *ngIf="hasBasicPlan" routerLink="/bonoloto/prediccion">
+            Generar predicción
           </button>
           <button class="generate-btn" *ngIf="!hasBasicPlan" (click)="showSubscriptionOptions()">Suscribir</button>
           <p *ngIf="!isLoggedIn" class="login-required">Necesitas <a routerLink="/auth/login">iniciar sesión</a> para generar predicciones</p>
