--- a/src/app/pages/historial-predicciones/historial-predicciones.component.html
+++ b/src/app/pages/historial-predicciones/historial-predicciones.component.html
@@ -53,7 +53,7 @@
           [class.active]="selectedGame === gameType"
           class="game-tab">
           {{ getGameDisplayName(gameType) }}
-          <span class="count">({{ historialData.predictionsByGame[gameType]?.length || 0 }})</span>
+          <span class="count">({{ historialData.predictionsByGame[gameType].length || 0 }})</span>
         </button>
       </div>
 
